--- a/style.css
+++ b/style.css
@@ -1,7 +1,58 @@
+:root {
+	--fg: lightblue;
+}
+
+body {
+	background-color: #181818;
+	color: #d8d8d8;
+	text-align: center;
+}
+
 ul {
-	list-style-type: circle;
-	/*
+	list-style-type: none;
+
 	margin: 0;
 	padding: 0;
-	 */
+}
+
+li {
+	width: 100%;
+}
+
+button {
+	opacity: 0.87;
+	padding: 1% 1%;
+	background-color: var(--fg);
+	border: none;
+	width: 50%;
+}
+
+button:hover {
+	opacity: 1;
+	box-shadow: inset 0px 0px 0.7em 0.3em black;
+}
+
+pre {
+	padding: 2em 2em;
+	margin: 2.5%;
+
+	border: 0.2em solid var(--fg);
+
+	text-align: left;
+	white-space: pre-wrap;
+	overflow: auto;
+	max-height: 200px;
+	overflow-wrap: anywhere;
+}
+
+header {
+	text-align: left;
+	margin: 1% 25%;
+}
+
+h1, h2, h3 {
+}
+
+em {
+	color: var(--fg);
 }
